; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/common/extr_bufmask.c_mask_lp_flags.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/common/extr_bufmask.c_mask_lp_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@FirstOffsetNumber = common dso_local global i64 0, align 8
@LP_UNUSED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mask_lp_flags(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i64 @PageGetMaxOffsetNumber(i32 %6)
  store i64 %7, i64* %4, align 8
  %8 = load i64, i64* @FirstOffsetNumber, align 8
  store i64 %8, i64* %3, align 8
  br label %9

9:                                                ; preds = %25, %1
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* %4, align 8
  %12 = icmp sle i64 %10, %11
  br i1 %12, label %13, label %28

13:                                               ; preds = %9
  %14 = load i32, i32* %2, align 4
  %15 = load i64, i64* %3, align 8
  %16 = call %struct.TYPE_4__* @PageGetItemId(i32 %14, i64 %15)
  store %struct.TYPE_4__* %16, %struct.TYPE_4__** %5, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %18 = call i64 @ItemIdIsUsed(%struct.TYPE_4__* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %13
  %21 = load i32, i32* @LP_UNUSED, align 4
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 4
  br label %24

24:                                               ; preds = %20, %13
  br label %25

25:                                               ; preds = %24
  %26 = load i64, i64* %3, align 8
  %27 = call i64 @OffsetNumberNext(i64 %26)
  store i64 %27, i64* %3, align 8
  br label %9

28:                                               ; preds = %9
  ret void
}

declare dso_local i64 @PageGetMaxOffsetNumber(i32) #1

declare dso_local %struct.TYPE_4__* @PageGetItemId(i32, i64) #1

declare dso_local i64 @ItemIdIsUsed(%struct.TYPE_4__*) #1

declare dso_local i64 @OffsetNumberNext(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
